fixed gap beween imgs

--- a/src/sass/main/_rest-main.scss
+++ b/src/sass/main/_rest-main.scss
@@ -80,8 +80,6 @@
   height: 245px;
   margin-right: 25px;
   margin-left: auto;
-
-  background: url(pexels-helena-lopes-696218.jpg);
 }
 
 .img-item-lanch {
